       ============================================
 Developed and maintained by Matthias Ettrich (ettrich@kde.org)


kwm (since 0.10) was almost rewritten from scratch in C++.  Many ideas
and some code went in from David Hogan's 9wm, a smart and small
windowmanager written in plain C. There are of course also strong
influences from my experiences with the former kwm.

In 0.10:
--------

patchlevel 31: 
	-- Bernd: minor fixes (typos in the sound events)
       - small fix for alt-tab
       - changed "ElectricBorderMovePointer" values to on/off to be 
         consitent with the rest of kwm.

patchlevel 30:
	-- Bernd: 
	
	Further improved Electric Borders. They can now be graphically
        configured using a kcontrol module and also completely turned off.
	
patchlevel 29:
  
  	- Bernd:
  	ElectricBorders are great but difficult to use. Added option
	ElectricBorderMovePointer which takes 0 or 1 as parameter.
	If ElectricBorderMovepointer is 0 ( false) the original behaviour
	implemented by Matthias is exhibited. If it is 1 ( true) the
	mouse pointer is moved to the middle of the desktop after
	an 'electric border' desktop switch.
	
  
  patchlevel 28:  
     - added WindowsPlacement=interactive,10 and 
	WindowsPlacement=manual. The number after interactive indicates
	what percentage from the current desktop array should represent
	the total overlap area before manual placement to be enforced. 
	This value can be bigger than 100 :-) (Cristian Tibirna)
     - fixed iconified windows avoidance bug in smart placement (CT)
     - electric borders: Just move the cursor to the border of
       the screen, wait a short time and kwm will magically change the
       current virtual desktop. The interval can be specified in 
       milliseconds with the ElectricBorder property in the kwmrc. 
       ElectricBorder=-1 dissables the feature.

         
  patchlevel 27:
     - support for shaded windows a la openstep.
     - new option: