@@ -11,6 +11,9 @@ influences from my experiences with the former kwm.
 
 In 0.10:
 --------
+patchlevel 32:
+	- deskUnclutter and deskCascade commands (to issue through kwmcom
+	   in minicli for the moment; krootwm menu entries soon) (CT)
 
 patchlevel 31: 
 	-- Bernd: minor fixes (typos in the sound events)
